@@ -44,6 +44,14 @@ class tx_oelib_Mapper_FrontEndUser extends tx_oelib_DataMapper {
 	protected $modelClassName = 'tx_oelib_Model_FrontEndUser';
 
 	/**
+	 * @var array the (possible) relations of the created models in the format
+	 *            DB column name => mapper name
+	 */
+	protected $relations = array(
+		'usergroup' => 'tx_oelib_Mapper_FrontEndUserGroup',
+	);
+
+	/**
 	 * Gets the currently logged-in front-end user.
 	 *
 	 * @return tx_oelib_Model_FrontEndUser the logged-in front-end user, will
