@@ -1,4 +1,5 @@
 0.6.0 - currently working on
+- [#2458] Feature: Support relations by comma-separated lists
 - [#2717] Change: Speed up the fake FE
 - [#1456] Cleanup: Simplify and clean up our singletons
 - [#2703] Feature: Add an optional parameter "cssFile" to Mail::setHTMLMessage
